--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -5,3 +5,20 @@ input.form-control {
 body {
     padding-top: 36px;
 }
+
+input {
+    margin-bottom: 5px;
+}
+
+nav.navbar.navbar-default.navbar-fixed-top {
+    padding-right: 15px;
+}
+
+body {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+nav.navbar.navbar-default.navbar-default.navbar-fixed-top div.container-fluid div.navbar-header {
+    float: none;
+}
