--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 input.form-control,
-textarea.form-control {
+textarea.form-control,
+select.form-control {
     margin-bottom: 5px;
 }
 
