--- a/public/assignment/views/page/templates/page-new.html
+++ b/public/assignment/views/page/templates/page-new.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>New Website</title>
+    <title>New Page</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="website-list.html">
+            <a class="navbar-brand" href="page-list.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand" href="#">
-                New Website
+                New Page
             </a>
             <p class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
+                <a href="#" class="navbar-link">
           <span class="glyphicon glyphicon-ok">
           </span>
                 </a>
@@ -40,32 +40,32 @@
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Cras justo odio</a></div>
-                            <div class="col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="../../widget/templates/widget-list.html">Home</a></div>
+                            <div class="col-xs-2 "><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Dapibus ac facilisis in</a></div>
-                            <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="../../widget/templates/widget-list.html">Profile</a></div>
+                            <div class="col-xs-2"><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Morbi leo risus</a></div>
-                            <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="../../widget/templates/widget-list.html">Settings</a></div>
+                            <div class="col-xs-2"><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Porta ac consectetur ac</a></div>
-                            <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="../../widget/templates/widget-list.html">Error</a></div>
+                            <div class="col-xs-2"><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Vestibulum at eros</a></div>
-                            <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="../../widget/templates/widget-list.html">Random</a></div>
+                            <div class="col-xs-2"><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                 </ul>
@@ -75,10 +75,10 @@
             <label for="name">Name</label>
             <input class="form-control"
                    id="name"
-                   placeholder="cnn">
-            <label for="description">Description</label>
-            <textarea id="description" class="form-control" rows="5" placeholder="news site"></textarea>
-            <a href="website-list.html" class="btn btn-block btn-primary">OK</a>
+                   placeholder="Home Page">
+            <label for="title">Title</label>
+            <textarea id="title" class="form-control" rows="5" placeholder="CNN - Home"></textarea>
+            <a href="page-list.html" class="btn btn-block btn-primary">OK</a>
         </div>
     </div>
 </div>
@@ -86,7 +86,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../../user/templates/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </p>
