--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -21,5 +21,5 @@
         Login
     </a>
     <a class="btn btn-success btn-block"
-       href="register.html">Register</a>
+       href="#!/register">Register</a>
 </div>
