--- a/public/assignment/views/website/templates/website-edit.html
+++ b/public/assignment/views/website/templates/website-edit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Edit Website</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -40,31 +40,31 @@
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Cras justo odio</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Cras justo odio</a></div>
                             <div class="col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Dapibus ac facilisis in</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Dapibus ac facilisis in</a></div>
                             <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Morbi leo risus</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Morbi leo risus</a></div>
                             <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Porta ac consectetur ac</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Porta ac consectetur ac</a></div>
                             <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../page/page-list.html">Vestibulum at eros</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Vestibulum at eros</a></div>
                             <div class="col-xs-2"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
@@ -88,7 +88,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../../user/templates/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </p>
