--- a/public/assignment/views/website/templates/website-list.html
+++ b/public/assignment/views/website/templates/website-list.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Website List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../user/profile.html">
+            <a class="navbar-brand" href="../../user/templates/profile.view.client.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand" href="#">
@@ -38,7 +38,7 @@
     </li>
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Cras justo odio</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.html">Cras justo odio</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">1/1/2017</div>
             <div class="col-md-3 visible-lg visible-md">2/2/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
@@ -46,7 +46,7 @@
     </li>
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Dapibus ac facilisis in</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.html">Dapibus ac facilisis in</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">2/2/2017</div>
             <div class="col-md-3 visible-lg visible-md">3/3/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
@@ -54,7 +54,7 @@
     </li>
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Morbi leo risus</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.html">Morbi leo risus</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">3/3/2017</div>
             <div class="col-md-3 visible-lg visible-md">4/4/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
@@ -62,7 +62,7 @@
     </li>
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Porta ac consectetur ac</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.html">Porta ac consectetur ac</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">4/4/2017</div>
             <div class="col-md-3 visible-lg visible-md">5/5/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
@@ -70,7 +70,7 @@
     </li>
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Vestibulum at eros</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.html">Vestibulum at eros</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">5/20/2017</div>
             <div class="col-md-3 visible-lg visible-md">5/20/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
@@ -82,7 +82,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../../user/templates/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </p>
