--- a/public/assignment/views/widget/templates/widget-heading-edit.html
+++ b/public/assignment/views/widget/templates/widget-heading-edit.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Widget Edit: Youtube</title>
+    <title>Widget Edit: Heading</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
             <a class="navbar-brand" href="widget-list.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
-            <a class="navbar-brand" href="#">Edit Youtube</a>
+            <a class="navbar-brand" href="#">Edit Heading</a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.html" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
@@ -27,30 +27,30 @@
 
 <div class="container-fluid">
 
-    <label for="name">Name</label>
-    <input class="form-control"
-           id="name"
-           placeholder="Dog Video"
-           value="Cat video!">
-    <label for="text">Text</label>
-    <textarea class="form-control" id="text" rows="5" placeholder="Look at that dog!">That's a funny cat video!</textarea>
-    <label for="url">URL</label>
-    <input id="url"
-           type="url"
-           class="form-control"
-           placeholder="https://www.youtube.com/watch?v=6naWCw5LSPc"
-           value="https://www.youtube.com/watch?v=wduZHtRbSkY"/>
-    <label for="width">Width (1-100)</label>
-    <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
-    <a href="widget-list.html"
-       class="btn btn-block btn-danger">Delete</a>
+            <label for="name">Name</label>
+            <input class="form-control"
+                   id="name"
+                   placeholder="top heading"
+                   value="Breaking News">
+            <label for="text">Text</label>
+            <textarea class="form-control" id="text" rows="5" placeholder="news site">U.S. Senate Reaches Compromise</textarea>
+            <label for="heading-size">Size</label>
+            <select id="heading-size" class="form-control">
+                <option>1 (The Biggest)</option>
+                <option>2 (X-Large)</option>
+                <option>3 (Large)</option>
+                <option>4 (Medium)</option>
+                <option>5 (Small)</option>
+                <option>6 (X-Small)</option>
+            </select>
+            <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
 
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../../user/templates/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </p>
