Updated Assignment to 3.19
Updated the assignment to reflect work donw through lecture 3.19.

--- a/public/assignment/views/page/templates/page-list.html
+++ b/public/assignment/views/page/templates/page-list.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../../website/templates/website-list.html">
+            <a class="navbar-brand" href="../../website/templates/website-list.view.client.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand" href="#">
