--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -51,7 +51,7 @@
     </form>
 
     <a class="btn btn-primary btn-block"
-       href="../../website/templates/website-list.html">Websites</a>
+       href="#!/user/{{model.userId}}/website">Websites</a>
     <a class="btn btn-danger  btn-block"
        href="#!/login">Logout</a>
 </div>
