--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -29,31 +29,31 @@
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Cras justo odio</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Cras justo odio</a></div>
                             <div class="col-xs-2 "><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Dapibus ac facilisis in</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Dapibus ac facilisis in</a></div>
                             <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Morbi leo risus</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Morbi leo risus</a></div>
                             <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Porta ac consectetur ac</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Porta ac consectetur ac</a></div>
                             <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.html">Vestibulum at eros</a></div>
+                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Vestibulum at eros</a></div>
                             <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
