--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -19,7 +19,7 @@
                 Pages
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-new.html" class="navbar-link">
+                <a href="page-new.view.client.html" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -38,42 +38,42 @@
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.html">Home</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Home</a></div>
                 <div class="col-sm-3 hidden-xs">1/1/2017</div>
                 <div class="col-md-3 visible-lg visible-md">2/2/2017</div>
-                <div class="col-sm-1 col-xs-2"><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2"><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.html">Profile</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Profile</a></div>
                 <div class="col-sm-3 hidden-xs">2/2/2017</div>
                 <div class="col-md-3 visible-lg visible-md">3/3/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.html">Settings</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Settings</a></div>
                 <div class="col-sm-3 hidden-xs">3/3/2017</div>
                 <div class="col-md-3 visible-lg visible-md">4/4/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.html">Error</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Error</a></div>
                 <div class="col-sm-3 hidden-xs">4/4/2017</div>
                 <div class="col-md-3 visible-lg visible-md">5/5/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.html">Random</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Random</a></div>
                 <div class="col-sm-3 hidden-xs">5/20/2017</div>
                 <div class="col-md-3 visible-lg visible-md">5/20/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
     </ul>
