--- a/public/assignment/views/widget/templates/widget-choose.view.client.html
+++ b/public/assignment/views/widget/templates/widget-choose.view.client.html
@@ -1,25 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Widget Selector</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../../css/style.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand" href="#">
                 Widget Selector
             </a>
             <p class="navbar-text pull-right">
-                <a href="widget-choose.html" class="navbar-link">
+                <a href="widget-choose.view.client.html" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -29,17 +18,17 @@
 
 <div class="container-fluid">
     <div class="wd-standalone-link">
-        <a href="widget-heading-edit.html" class="navbar-link">
+        <a href="widget-heading-edit.view.client.html" class="navbar-link">
             <span>Header</span>
         </a>
     </div>
     <div class="wd-standalone-link">
-        <a href="widget-heading-edit.html" class="navbar-link">
+        <a href="widget-heading-edit.view.client.html" class="navbar-link">
             <span>Image</span>
         </a>
     </div>
     <div class="wd-standalone-link">
-        <a href="widget-youtube-edit.html" class="navbar-link">
+        <a href="widget-youtube-edit.view.client.html" class="navbar-link">
             <span>Youtube</span>
         </a>
     </div>
@@ -54,6 +43,3 @@
         </p>
     </div>
 </nav>
-
-</body>
-</html>
