--- a/public/assignment/views/widget/templates/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image-edit.view.client.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Widget Edit: Youtube</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../../css/style.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
-            <a class="navbar-brand" href="#">Edit Youtube</a>
+            <a class="navbar-brand" href="#">Edit Image</a>
             <p class="navbar-text pull-right">
-                <a href="widget-list.html" class="navbar-link">
+                <a href="widget-list.view.client.html" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -30,19 +19,23 @@
     <label for="name">Name</label>
     <input class="form-control"
            id="name"
-           placeholder="Dog Video"
-           value="Cat video!">
+           placeholder="Cat Picture"
+           value="Dog Picture">
     <label for="text">Text</label>
-    <textarea class="form-control" id="text" rows="5" placeholder="Look at that dog!">That's a funny cat video!</textarea>
+    <textarea class="form-control" id="text" rows="5" placeholder="That's a funny cat picture!">Look at that dog!</textarea>
     <label for="url">URL</label>
     <input id="url"
            type="url"
            class="form-control"
-           placeholder="https://www.youtube.com/watch?v=6naWCw5LSPc"
-           value="https://www.youtube.com/watch?v=wduZHtRbSkY"/>
+           placeholder="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+           value="https://upload.wikimedia.org/wikipedia/commons/1/18/Bartagame_fcm.jpg"/>
     <label for="width">Width (1-100)</label>
     <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
-    <a href="widget-list.html"
+    <label for="file">Upload</label>
+    <input id="file" type="file" class="form-control" />
+    <a href="#"
+       class="btn btn-block btn-primary">Upload Image</a>
+    <a href="widget-list.view.client.html"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
@@ -56,6 +49,3 @@
         </p>
     </div>
 </nav>
-
-</body>
-</html>
