--- a/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Widget Edit: Heading</title>
+    <title>Widget Edit: Youtube</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../../../css/style.css" rel="stylesheet"/>
 </head>
@@ -12,12 +12,12 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.html">
+            <a class="navbar-brand" href="widget-list.view.client.html">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
-            <a class="navbar-brand" href="#">Edit Heading</a>
+            <a class="navbar-brand" href="#">Edit Youtube</a>
             <p class="navbar-text pull-right">
-                <a href="widget-list.html" class="navbar-link">
+                <a href="widget-list.view.client.html" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -27,23 +27,23 @@
 
 <div class="container-fluid">
 
-            <label for="name">Name</label>
-            <input class="form-control"
-                   id="name"
-                   placeholder="top heading"
-                   value="Breaking News">
-            <label for="text">Text</label>
-            <textarea class="form-control" id="text" rows="5" placeholder="news site">U.S. Senate Reaches Compromise</textarea>
-            <label for="heading-size">Size</label>
-            <select id="heading-size" class="form-control">
-                <option>1 (The Biggest)</option>
-                <option>2 (X-Large)</option>
-                <option>3 (Large)</option>
-                <option>4 (Medium)</option>
-                <option>5 (Small)</option>
-                <option>6 (X-Small)</option>
-            </select>
-            <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
+    <label for="name">Name</label>
+    <input class="form-control"
+           id="name"
+           placeholder="Dog Video"
+           value="Cat video!">
+    <label for="text">Text</label>
+    <textarea class="form-control" id="text" rows="5" placeholder="Look at that dog!">That's a funny cat video!</textarea>
+    <label for="url">URL</label>
+    <input id="url"
+           type="url"
+           class="form-control"
+           placeholder="https://www.youtube.com/watch?v=6naWCw5LSPc"
+           value="https://www.youtube.com/watch?v=wduZHtRbSkY"/>
+    <label for="width">Width (1-100)</label>
+    <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
+    <a href="widget-list.view.client.html"
+       class="btn btn-block btn-danger">Delete</a>
 
 </div>
 
