--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -16,21 +16,15 @@
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div ng-repeat="widget in model.widgets" class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <a href="widget-heading-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
-
-        <div ng-switch="widget.widgetType">
-            <div ng-switch-when="HTML"
-                 ng-bind-html="model.trust(widget.text)">
-            </div>
-            <div ng-switch-default>
-                <div ng-include="model.widgetUrl(widget)"</div>
-            </div>
-        </div>
+<div ng-switch="model.widget.widgetType.toLowerCase()">
+    <div ng-switch-when="heading">
+        <div ng-include="'views/widget/templates/widget-heading-edit.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="image">
+        <div ng-include="'views/widget/templates/widget-image-edit.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="youtube">
+        <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
     </div>
 
 </div>
