--- a/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.view.client.html">
+            <a class="navbar-brand"
+               href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
-            <a class="navbar-brand" href="#">Edit Heading</a>
+            <a class="navbar-brand" href="#">Edit Youtube</a>
             <p class="navbar-text pull-right">
-                <a href="widget-list.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"
+                   class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -32,7 +34,8 @@
                 <option>5 (Small)</option>
                 <option>6 (X-Small)</option>
             </select>
-            <a href="widget-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
+    <a ng-click="model.deleteWidget(model.widget.widget_id)"
+       class="btn btn-block btn-danger">Delete</a>
 
 </div>
 
