--- a/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Widget Edit: Youtube</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../../css/style.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.view.client.html">
+            <a class="navbar-brand"
+               href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand" href="#">Edit Youtube</a>
             <p class="navbar-text pull-right">
-                <a href="widget-list.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"
+                   class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -28,21 +19,29 @@
 <div class="container-fluid">
 
     <label for="name">Name</label>
-    <input class="form-control"
+    <input ng-model="model.widget.name"
+           class="form-control"
            id="name"
            placeholder="Dog Video"
            value="Cat video!">
     <label for="text">Text</label>
-    <textarea class="form-control" id="text" rows="5" placeholder="Look at that dog!">That's a funny cat video!</textarea>
+    <textarea ng-model="model.widget.text"
+              class="form-control"
+              id="text"
+              rows="5"
+              placeholder="Look at that dog!"></textarea>
     <label for="url">URL</label>
     <input id="url"
+           ng-model="model.widget.url"
            type="url"
+           class="form-control"/>
+    <label for="width">Width (1%-100%)</label>
+    <input ng-model="model.widget.width"
+           id="width"
+           type="text"
            class="form-control"
-           placeholder="https://www.youtube.com/watch?v=6naWCw5LSPc"
-           value="https://www.youtube.com/watch?v=wduZHtRbSkY"/>
-    <label for="width">Width (1-100)</label>
-    <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
-    <a href="widget-list.view.client.html"
+           placeholder="1%"/>
+    <a ng-click="model.deleteWidget(model.widget.widget_id)"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
@@ -56,6 +55,3 @@
         </p>
     </div>
 </nav>
-
-</body>
-</html>
